2009-09-26  Zan Dobersek  <zandobersek@gmail.com>

Reviewed by Gustavo Noronha.

        [Layout tests] [Gtk] Gtk DumpRenderTree should use WebKit test fonts
        https://bugs.webkit.org/show_bug.cgi?id=29689

        Load test fonts through FontConfig before each test.
        This ensures a more proper rendering of the tests.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (initializeFonts):
        (runTest):
        (main):
        * DumpRenderTree/gtk/fonts.conf: Copied from WebKitTools/DumpRenderTree/qt/fonts.conf.
        * GNUmakefile.am:

Canonical link: https://commits.webkit.org/40354@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48791 268f45cc-cd09-0410-ab3c-d52691b4dbfc